# PromptStrike

./: .dockerignore  .env.production  .gitignore  CHANGELOG-v0.1.0-alpha.md  CHANGELOG-v0.2.0-alpha.md  CHANGELOG-v0.3.0-alpha.md  CHANGELOG-α.md  CHAOS_TESTING_GUIDE.md  CLAUDE.md  CLIENT_API_KEY_TEST_RESULTS.md  CLIENT_PDF_VERIFICATION_GUIDE.md  CLI_STABILITY_TESTING_COMPLETE.md  CLI_STABILITY_TEST_REPORT.md  CNAME  COMPLIANCE_PDF_VERIFICATION_SUMMARY.md  COMPREHENSIVE_CLI_STABILITY_TEST_REPORT.md  DEPLOY_API_GATEWAY.md  DOD_COMPLETION_SUMMARY.md  Dockerfile  Dockerfile.psguard  Dockerfile.psguard-fixed  FINAL_OPTIMIZATION_REPORT.md  HELM_DEPLOYMENT_ISSUE_RESOLUTION.md  HELM_DEPLOYMENT_TEST_GUIDE.md  HELM_ONE_COMMAND_VERIFICATION_SUMMARY.md  INSTALLATION_TEST.md  KPI-DASHBOARD.md  MANUAL_TEST_GUIDE.md  Makefile.chaos  OPEN_CORE_IMPLEMENTATION.md  PRODUCTION_READINESS_REPORT.md  README.md  Retro-S1.md  SIDECAR_RESOURCE_TEST_GUIDE.md  SMOKE_TEST_VERIFICATION_COMPLETE.md  SPRINT-S1-CHECKLIST.md  TESTING_STRATEGY.md  TEST_SCRIPT_COMPARISON.md  THREAT_MODEL_VALIDATION_SUMMARY.md  USAGE_GUIDE.md  (+111 more)
.chroma/: chroma.sqlite3
ai-chunks/: .gitignore  CHANGELOG-v0.1.0-alpha_ck0.md  CHANGELOG-α_ck0.md  CLAUDE_ck0.md  Dockerfile_ck0.md  README_ck0.md  SPRINT-S1-CHECKLIST_ck0.md  docker-compose_ck0.md  fix_chromadb_macos_ck0.md  makefile_ck0.md  pyproject_ck0.md
api_gateway/: .env.example  Dockerfile  enhanced_main.py  main.py  main_simple.py  requirements.txt
chaos/: chaos_scenarios.yaml  install_chaos_mesh.sh  run_chaos_tests.sh
concurrent-test-reports/: promptstrike_scan_20250709_115013.html  promptstrike_scan_20250709_115013.json  promptstrike_scan_20250709_115045.html  promptstrike_scan_20250709_115045.json  promptstrike_scan_20250709_120352.html  promptstrike_scan_20250709_120352.json
data/: attack_prompts.txt  normal_prompts.txt
docker/: Dockerfile.chaos
docs/: COMPLIANCE_GUIDE.md  _config.yml  cancel.html  chaos-testing.md  cli-spec.md  helm_install_guide.md  index.html  open-core-guide.md  privacy.html  security-privacy.md  stripe-webhook-setup.md  success.html  terms.html  test-payments.html  test-production.html
examples/: guardrail_usage.py
final_test_cli/: redforge_scan_20250720_143732.json
guardrail/: __init__.py  cost_guard.py  requirements.txt  sdk.py  test_cost_guard.py
guardrail_poc/: Makefile  README.md  TESTING.md  docker-compose.yml  test-minikube-poc.sh  test_units.py
k8s/: chaos-testing-namespace.yaml  chaos-testing-pod.yaml
load-tests/: k6-sidecar-test.js
manual_test_reports/: compliance.json  redforge_scan_20250720_175643.json  (+5 more)
(+307 files in other folders)
